added twig extension to access method from Score service

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,12 +1,20 @@
 parameters:
-    cisco.formtype.audit.class:       CiscoSystems\AuditBundle\Form\Type\AuditType
-    cisco.worker.audit_score.class:   CiscoSystems\AuditBundle\Worker\Score
+    cisco.formtype.audit.class:           CiscoSystems\AuditBundle\Form\Type\AuditType
+    cisco.twig.audit_extension.class:    CiscoSystems\AuditBundle\Twig\Extension\AuditExtension
+    cisco.worker.audit_score.class:      CiscoSystems\AuditBundle\Worker\Score
 
 services:
     cisco.formtype.audit:
         class: %cisco.formtype.audit.class%
         tags:
             - { name: form.type, alias: audit }
+
+    cisco.twig.audit_extension:
+        class: %cisco.twig.audit_extension.class%
+        arguments:
+            - '@cisco.worker.audit_score'
+        tags:
+            - { name: twig.extension }
 
     cisco.worker.audit_score:
         class:  %cisco.worker.audit_score.class%
