--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,7 +1,7 @@
 parameters:
     cisco.formtype.audit.class:           CiscoSystems\AuditBundle\Form\Type\AuditType
     cisco.twig.audit_extension.class:    CiscoSystems\AuditBundle\Twig\Extension\AuditExtension
-    cisco.worker.audit_score.class:      CiscoSystems\AuditBundle\Worker\AuditScoring
+    cisco.worker.audit_score.class:      CiscoSystems\AuditBundle\Worker\Score
 
 services:
     cisco.formtype.audit:
