--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,6 @@
 parameters:
     cisco.formtype.audit.class:           CiscoSystems\AuditBundle\Form\Type\AuditType
+    cisco.formtype.section.class:         CiscoSystems\AuditBundle\Form\Type\SectionType
     cisco.twig.audit_extension.class:    CiscoSystems\AuditBundle\Twig\Extension\AuditExtension
     cisco.worker.audit_score.class:      CiscoSystems\AuditBundle\Worker\AuditScoring
 
@@ -9,10 +10,18 @@ services:
         tags:
             - { name: form.type, alias: audit }
 
+    cisco.formtype.section:
+        class: %cisco.formtype.section.class%
+        arguments:
+            - '@doctrine.orm.entity_manager'
+        tags:
+            - { name: form.type, alias: audit_section }
+
     cisco.twig.audit_extension:
         class: %cisco.twig.audit_extension.class%
         arguments:
             - '@cisco.worker.audit_score'
+            - '@doctrine.orm.entity_manager'
         tags:
             - { name: twig.extension }
 
