--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "symfony/symfony": ">=2.1",
         "stof/doctrine-extensions-bundle": "dev-master",
-        "craue/twigextensions-bundle": "dev-master"
+        "craue/twigextensions-bundle": "dev-master",
+        "liuggio/excelbundle": ">=1.0.4"
     },
     "autoload": {
         "psr-0": { "CiscoSystems\\AuditBundle": "" }
