--- a/Resources/config/routing/fields.yml
+++ b/Resources/config/routing/fields.yml
@@ -1,38 +1,38 @@
-cisco_auditfield_add:
+audit_field_add:
     pattern:  /add
-    defaults: { _controller: CiscoSystemsAuditBundle:AuditFormField:edit }
+    defaults: { _controller: CiscoSystemsAuditBundle:Field:edit }
 
-cisco_auditfield_edit:
+audit_field_edit:
     pattern:  /{field_id}/edit
-    defaults: { _controller: CiscoSystemsAuditBundle:AuditFormField:edit }
+    defaults: { _controller: CiscoSystemsAuditBundle:Field:edit }
     requirements:
         field_id: \d+
 
-cisco_auditfield_delete:
+audit_field_delete:
     pattern:  /{field_id}/delete
-    defaults: { _controller: CiscoSystemsAuditBundle:AuditFormField:delete }
+    defaults: { _controller: CiscoSystemsAuditBundle:Field:delete }
     requirements:
         field_id: \d+
 
-cisco_auditfield_calculate_score:
+audit_field_calculate_score:
     pattern:  /calculate-score
-    defaults: { _controller: CiscoSystemsAuditBundle:AuditFormField:calculateScore }
+    defaults: { _controller: CiscoSystemsAuditBundle:Field:calculateScore }
     requirements:
         _method:  POST
         _format:  JSON
 
-cisco_auditfield_view:
+audit_field_view:
     pattern:  /{field_id}
-    defaults: { _controller: CiscoSystemsAuditBundle:AuditFormField:view }
+    defaults: { _controller: CiscoSystemsAuditBundle:Field:view }
     requirements:
         field_id: \d+
 
-cisco_auditfield_load:
+audit_field_load:
     pattern:  /{field_id}
-    defaults: { _controller: CiscoSystemsAuditBundle:AuditFormField:load }
+    defaults: { _controller: CiscoSystemsAuditBundle:Field:load }
     requirements:
         field_id: \d+
 
-cisco_auditfields:
+audit_fields:
     pattern:  /
-    defaults: { _controller: CiscoSystemsAuditBundle:AuditFormField:index }
+    defaults: { _controller: CiscoSystemsAuditBundle:Field:index }
