--- a/Resources/config/routing/fields.yml
+++ b/Resources/config/routing/fields.yml
@@ -1,38 +1,38 @@
 audit_field_add:
-    pattern:  /add
+    path:  /add
     defaults: { _controller: CiscoSystemsAuditBundle:Field:edit }
 
 audit_field_edit:
-    pattern:  /{field_id}/edit
+    path:  /{field_id}/edit
     defaults: { _controller: CiscoSystemsAuditBundle:Field:edit }
     requirements:
         field_id: \d+
 
 audit_field_delete:
-    pattern:  /{field_id}/delete
+    path:  /{field_id}/delete
     defaults: { _controller: CiscoSystemsAuditBundle:Field:delete }
     requirements:
         field_id: \d+
 
 audit_field_calculate_score:
-    pattern:  /calculate-score
+    path:  /calculate-score
     defaults: { _controller: CiscoSystemsAuditBundle:Field:calculateScore }
     requirements:
         _method:  POST
         _format:  JSON
 
 audit_field_view:
-    pattern:  /{field_id}
+    path:  /{field_id}
     defaults: { _controller: CiscoSystemsAuditBundle:Field:view }
     requirements:
         field_id: \d+
 
 audit_field_load:
-    pattern:  /{field_id}
+    path:  /{field_id}
     defaults: { _controller: CiscoSystemsAuditBundle:Field:load }
     requirements:
         field_id: \d+
 
 audit_fields:
-    pattern:  /
+    path:  /
     defaults: { _controller: CiscoSystemsAuditBundle:Field:index }
